# risc0-groth16-bls

./: .gitignore  END_TO_END.md  LICENSE  Makefile  PUBLIC_INPUTS.md  README.md  circuit_id.json  constraints.txt
go/: STARK_VERIFY_SPEC.md  go.mod  go.sum
go/cmd/ceremony/: main.go
go/cmd/constraints/: main.go  receipt_compile.go
go/cmd/genfri/: main.go
go/cmd/groth16bls/: circuit_id.go  dump_test.go  main.go  prove_cpu.go  prove_gpu.go
go/cmd/provee2e/: main.go
go/field/babybear/: babybear.go  babybear_test.go  ingest_test.go
go/hash/poseidon_bls/: consts.go  hashelem_test.go  poseidon.go  poseidon_test.go  sponge.go  (+1 more)
go/keys/: keys.go  keys_test.go  manifest.json
go/serialize/: cardano.go  cardano_test.go
go/stark/: claim.go  claim_test.go  deep_check.go  deep_check_test.go  deep_evalu.go  deep_evalu_test.go  deep_frieval.go  deep_frieval_test.go  deep_polyext.go  deep_polyext_internal_test.go  deep_polyext_test.go  deep_tables.go  driver.go  driver_fri_test.go  driver_test.go  fixture_consistency_test.go  fixtures_present_test.go  fri.go  fri_fold_test.go  fri_query_test.go  fri_test.go  fuzz_seal_attack_test.go  merkle.go  merkle_real_test.go  merkle_test.go  query_test.go  receipt_circuit.go  seal.go  seal_drive_test.go  seal_validate_test.go  transcript.go  transcript_real_test.go  transcript_test.go
prototype/poseidon_bls/: gen_consts_go.py  gen_consts_rs.py  validate.py
rust/groth16-bls-verify/: Cargo.toml
rust/groth16-bls-verify/src/: lib.rs
rust/groth16-bls-verify/tests/: real_proof.rs
tools/: pipeline_e2e.sh  verify_constants.sh
(+9 files in other folders)
