[package]
name = "groth16-bls-verify"
version = "0.1.0"
edition = "2021"
description = "Native Rust verifier for the BLS12-381 Groth16 (+bsb22 commitment) proofs produced by the stark-to-snark-bls gnark prover. Mirrors gnark's verification equation exactly; reads the Cardano-v2 / Zcash-compressed byte format."
license = "Apache-2.0"

[dependencies]
# zkcrypto bls12_381 reads gnark's IETF/Zcash compressed encoding natively (from_compressed,
# with on-curve + subgroup checks) and provides the pairing — unlike arkworks' own serialization.
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
sha2 = "0.10"

[dev-dependencies]
bls12_381 = "0.8"
